# MyThings

./: .editorconfig  .gitignore  LICENSE  docker-compose.yaml  pyproject.toml
mythings/: __init__.py
mythings/core/logger/: __init__.py
mythings/core/settings/: __init__.py
mythings/core/settings/db/: __init__.py  backends.py  base.py  engine.py  server.py  sqlite.py  url_params.py
mythings/core/settings/utils/: __init__.py  db_paths.py
mythings/core/utils/: __init__.py  paths.py
mythings/db/: __init__.py
tests/: __init__.py
tests/core/settings/: __init__.py
tests/core/settings/db/: test_engine.py  test_server.py  test_sqlite.py  test_url_params.py
tests/core/settings/utils/: test_db_paths.py
tests/core/utils/: test_paths.py
